[package]
name = "portal"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.5.54", features = ["derive"] }
local-ip-address = "0.6.9"
rcgen = "0.14.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
uuid = { version = "1.19.0", features = ["serde", "v5"] }
